--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.2",
-        "phpmailer/phpmailer": "^6.8"
+        "phpmailer/phpmailer": "^6.8",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
