--- a/.env
+++ b/.env
@@ -2,14 +2,12 @@ APP_ENV=local
 APP_DEBUG=true
 APP_URL=http://localhost
 
-DB_DSN="mysql:host=127.0.0.1;dbname=nomedobanco;charset=utf8mb4"
-DB_USER="root"
-DB_PASS=""
+DB_DSN="mysql:host=193.203.175.134;dbname=u987547986_proj_aevc;charset=utf8mb4"
+DB_USER="u987547986_proj_aevc"
+DB_PASS="5&=4pbg~S"
 
-SMTP_HOST="smtp.seudominio.com"
-SMTP_USER="seu@email.com"
-SMTP_PASS="suasenha"
-SMTP_PORT=587
-SMTP_SECURE=tls
-
-ASD="asdasdas"
+SMTP_HOST="smtp.hostinger.com"
+SMTP_USER="paulo@studiosilver.com.br"
+SMTP_PASS="@Sucesso2022@"
+SMTP_PORT=465
+SMTP_SECURE=ssl
