--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://agenciasilver.com.br/projetos/aevc
 
 DB_DSN="mysql:host=193.203.175.134;dbname=u987547986_proj_aevc;charset=utf8mb4"
 DB_USER="u987547986_proj_aevc"
