modified:   .env 	modified:   app/controllers/Sistema.php 	modified:   app/views/esqueci-senha.php

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_URL=https://agenciasilver.com.br/projetos/aevc
+APP_NAME="AEVC - Canoinhas SC"
 
 DB_DSN="mysql:host=193.203.175.134;dbname=u987547986_proj_aevc;charset=utf8mb4"
 DB_USER="u987547986_proj_aevc"
